Update about page layout

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    {{ 'content.introduction'|trans|raw }}
+                    {{ 'index.introduction'|trans|raw }}
                 </div>
             </div>
         </div>
@@ -46,13 +46,13 @@
                         </div>
                     {% else %}
                         <a href="{{ path('github_connect') }}" class="btn btn-ghost btn-success">
-                            {{ 'content.authentication.github.button.label'|trans|raw }}
+                            {{ 'index.authentication.github.button.label'|trans|raw }}
                         </a>
                         <a href="{{ path('twitter_connect') }}" class="btn btn-ghost btn-success">
-                            {{ 'content.authentication.twitter.button.label'|trans|raw }}
+                            {{ 'index.authentication.twitter.button.label'|trans|raw }}
                         </a>
                         <a href="{{ path('facebook_connect') }}" class="btn btn-ghost btn-success">
-                            {{ 'content.authentication.facebook.button.label'|trans|raw }}
+                            {{ 'index.authentication.facebook.button.label'|trans|raw }}
                         </a>
                     {% endif %}
                 </div>
@@ -93,10 +93,10 @@
 
     <section class="page-section" id="examples">
         <div class="container">
-            <h2 id="contribution-examples">{{ 'about.uploaded_assets.examples.title'|trans }}</h2>
+            <h2 id="contribution-examples">{{ 'index.examples.title'|trans }}</h2>
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <h5>{{ 'about.uploaded_assets.examples.message'|trans }}</h5>
+                    <h5>{{ 'index.examples.message'|trans }}</h5>
                     <div class="video-container">
                         <video controls poster="/assets/images/ilovephp.jpg">
                             <source src="/assets/videos/ilovephp.webm" type='video/webm;codecs="vp8, vorbis"'>
@@ -105,13 +105,13 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <h5>{{ 'about.uploaded_assets.examples.express_yourself'|trans }}</h5>
+                    <h5>{{ 'index.examples.express_yourself'|trans }}</h5>
                     <div class="video-container">
                         <img src="/assets/images/phpisart.png" class="fitting-image">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <h5>{{ 'about.uploaded_assets.examples.php_acronym'|trans }}</h5>
+                    <h5>{{ 'index.examples.php_acronym'|trans }}</h5>
                     <div class="video-container">
                         <video controls>
                             <source src="/assets/videos/people.webm" type='video/webm;codecs="vp8, vorbis"'>
@@ -120,13 +120,13 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <h5>{{ 'about.uploaded_assets.examples.tribute'|trans }}</h5>
+                    <h5>{{ 'index.examples.tribute'|trans }}</h5>
                     <div class="video-container">
                         <img src="/assets/images/phpbiscuits.jpg" class="fitting-image">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <h5>{{ 'about.uploaded_assets.examples.php_asset'|trans }}</h5>
+                    <h5>{{ 'index.examples.php_asset'|trans }}</h5>
                     <div class="video-container">
                         <video controls poster="/assets/images/php-saved-my-life.jpg">
                             <source src="/assets/videos/php-saved-my-life.webm" type='video/webm;codecs="vp8, vorbis"'>
@@ -137,7 +137,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <h5>…</h5>
                     <div class="video-container">
-                        {{ 'about.uploaded_assets.examples.beyond'|trans|raw }}
+                        {{ 'index.examples.beyond'|trans|raw }}
                     </div>
                 </div>
             </div>
