Improve some UI details

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -2,6 +2,8 @@
 
 {% import "AppBundle:Macro:style.html.twig" as haphpy %}
 
+{% block title %}{{ parent() }} - {{ 'about.title'|trans }}{% endblock %}
+
 {% block content %}
     <section class="page-section dark-background" id="final-video">
         <div class="container">
