Remove Contribution the hard way

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -39,77 +39,11 @@
                 </div>
             </div>
             <div class="row">
-                {{ form_start(form) }}
-                {{ form_errors(form) }}
-
-                {{ form_widget(form._token) }}
-
-                <div class="col-sm-12 col-md-4 haphpy-step ">
-                    {% if contribution.isNew %}
-                    <h3>
-                        {% set color = haphpy.color %}
-                        <span class="haphpy-step-number" style="background-color:{{ color }};">1</span>
-                        <span style="color:{{ color }};">{{ 'step.authenticate.title'|trans }}</span>
-                    </h3>
-                    {% endif %}
-
-                    <div class="text-center">
-                        {% if user is not null %}
-                            {{ 'step.authenticate.logged_in'|trans({
-                                    '%authProvider%': user.authProvider,
-                                    '%username%': user.visibleName
-                                })|raw
-                            }}
-                        {% else %}
-                            <a href="{{ path('github_connect') }}" class="auth-button">
-                                <span class="fa haphpy-icon-github" style="background-color:#201f1f;"></span>
-                            </a>
-                            <a href="{{ path('twitter_connect') }}" class="auth-button">
-                                <span class="fa haphpy-icon-twitter" style="background-color:#55acee;"></span>
-                            </a>
-                            <a href="{{ path('facebook_connect') }}" class="auth-button">
-                                <span class="fa haphpy-icon-facebook" style="background-color:#3b5998;"></span>
-                            </a>
-                        {% endif %}
-                    </div>
-                </div>
-
-                <div class="col-sm-12 col-md-4 haphpy-step">
-                    {% if contribution.isNew %}
-                        <h3>
-                            {% set color = haphpy.color %}
-                            <span class="haphpy-step-number" style="background-color:{{ color }};">2</span>
-                            <span style="color:{{ color }};">{{ 'step.file.title'|trans }}</span>
-                        </h3>
-                        {{ form_errors(form.file) }}
-                        {{ form_widget(form.file, {disabled: user ? false : true}) }}
-                    {% else %}
-                        <h3>{{ 'step.submitted.thanks'|trans }}</h3>
-                    {% endif %}
-                </div>
-
-                <div class="col-sm-12 col-md-4 haphpy-step">
-                    {% if contribution.isNew %}
-                        <h3>
-                            {% set color = haphpy.color %}
-                            <span class="haphpy-step-number" style="background-color:{{ color }};">3</span>
-                            <span style="color:{{ color }};">{{ 'step.submit.title'|trans }}</span>
-                        </h3>
-                        <div class="form-group">
-                            {{ form_label(form.creditWanted, 'form.credit_wanted.choose') }}
-                            {{ form_errors(form.creditWanted, {attr: {class: 'error-list'}}) }}
-                            {{ form_widget(form.creditWanted, {disabled: user ? false : true}) }}
-                        </div>
-
-                        <div class="text-center">
-                            <input type="submit" name="submit" value="{{ 'form.submit.label'|trans }}" class="btn btn-primary" {{ user ? '' : ' disabled' }}/>
-                        </div>
-                    {% else %}
-                        <div class="text-center">
-                            <a href="{{ path('haphpy_delete') }}" class="btn btn-primary">{{ 'step.submitted.remove_button'|trans }}</a>
-                        </div>
-                    {% endif %}
-                </div>
+                {% if contribution.fileName %}
+                    {% include 'AppBundle:Default:contributed.html.twig' %}
+                {% else %}
+                    {% include 'AppBundle:Form:contribution.html.twig' %}
+                {% endif %}
             </div>
         </div>
     </section>
