Add preview for uploaded media

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/index.html.twig
@@ -64,7 +64,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <h5>{{ 'index.examples.express_yourself'|trans }}</h5>
                     <div class="video-container">
-                        <img src="/assets/images/phpisart.png" class="fitting-image">
+                        <img src="/assets/images/phpisart.png" class="fitting-media">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
@@ -79,7 +79,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <h5>{{ 'index.examples.tribute'|trans }}</h5>
                     <div class="video-container">
-                        <img src="/assets/images/phpbiscuits.jpg" class="fitting-image">
+                        <img src="/assets/images/phpbiscuits.jpg" class="fitting-media">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
