--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributed.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributed.html.twig
@@ -10,6 +10,23 @@
 
 <div class="col-sm-12 col-md-4 haphpy-step">
         <h3>{{ 'step.submitted.thanks'|trans }}</h3>
+        <div>
+        {% if contribution.file.genericMimeType == 'image' %}
+            <img src="{{ path('media_serve', {
+                auth: user.authProvider,
+                identifier: user.username
+            }) }}" class="fitting-media">
+        {% endif %}
+        {% if contribution.file.genericMimeType == 'video' %}
+            <video controls class="fitting-media">
+                <source src="{{ path('media_serve', {
+                    auth: user.authProvider,
+                    identifier: user.username
+                }) }}" type="{{ contribution.file.mimeTypeForHtmlPlayer }}">
+                This video is not supported by browsers.
+            </video>
+        {% endif %}
+        </div>
 </div>
 
 <div class="col-sm-12 col-md-4 haphpy-step">
