--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -60,8 +60,12 @@ a.stand-out:hover {
 
 header#header {
     padding: 80px 0 0 0;
-    background: url(../images/sparkles.jpg) center center no-repeat;
-    background-size: cover;
+    background:
+        radial-gradient(circle, #f34141, transparent 50%),
+        linear-gradient(to bottom left, HotPink, transparent, DarkOrange),
+        linear-gradient(to right, DarkSeaGreen, #f34141, DodgerBlue)
+        ;
+    background-color: #f34141;
     margin-bottom: 0;
 }
 
@@ -73,6 +77,8 @@ header#header div {
 
 #haphpy-logo img {
     width: 100%;
+    filter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
+    -webfilter: drop-shadow( 2px 2px 1px rgba(0,0,0,0.3));
 }
 
 @media screen and (max-width: 767px) {
