Remove header and gauge from secondary pages

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/about.html.twig
@@ -4,6 +4,10 @@
 
 {% block title %}{{ parent() }} - {{ 'about.title'|trans }}{% endblock %}
 
+{% block header %}{% endblock %}
+
+{% block gauge %}{% endblock %}
+
 {% block content %}
     <section class="page-section dark-background" id="final-video">
         <div class="container">
