--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -4,6 +4,10 @@
 
 {% block title %}{{ parent() }} - {{ 'contributions.title'|trans }}{% endblock %}
 
+{% block header %}{% endblock %}
+
+{% block gauge %}{% endblock %}
+
 {% block content %}{% spaceless %}
     <section id="contributions" class="page-section dark-background">
         <div class="container">
