--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/submitted.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/submitted.html.twig
@@ -32,7 +32,12 @@
             </div>
             <h1>{{ 'success.thanks'|trans|raw }}</h1>
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6 text-center">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://haphpy-birthday.net" data-text="I sent my contribution to the HaPHPy Birthday movie! :-) #20YearsOfPHP" data-via="HaPHPy20" data-hashtags="PHP" data-count="none">Tweet</a>
+                    <script>
+                        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                    </script>
+                    <div class="fb-share-button" data-href="http://haphpy-birthday.net" data-layout="button"></div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 text-right">
                     <a href="{{ path('haphpy_contributions') ~ '#contributions' }}" class="page-link">
