--- a/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/views/Default/contributions.html.twig
@@ -23,7 +23,7 @@
                 {% for contribution in contributions %}
                     <div class="col-sm-12 col-md-6 col-lg-3 contribution">
                         <span class="fa haphpy-icon-{{ contribution.authProvider }}"></span>
-                        {{ contribution.identifier }}
+                        {{ contribution.visibleName }}
                     </div>
                 {% endfor %}
             </div>
